--- a/index.html
+++ b/index.html
@@ -5,122 +5,31 @@
   <title>Upload para YouTube</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
-    /* Reset básico */
-    * {
-      box-sizing: border-box;
-      margin: 0;
-      padding: 0;
-      font-family: Arial, sans-serif;
-    }
-
-    body {
-      background: #f4f6f9;
-      color: #333;
-      display: flex;
-      justify-content: center;
-      align-items: flex-start;
-      padding: 20px;
-    }
-
-    .container {
-      background: #fff;
-      padding: 20px;
-      border-radius: 12px;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
-      max-width: 500px;
-      width: 100%;
-    }
-
-    h2 {
-      text-align: center;
-      margin-bottom: 20px;
-      color: #444;
-    }
-
-    label {
-      display: block;
-      margin-bottom: 6px;
-      font-weight: bold;
-      font-size: 14px;
-    }
-
-    input, textarea, button {
-      width: 100%;
-      padding: 10px;
-      margin-bottom: 15px;
-      border-radius: 8px;
-      border: 1px solid #ccc;
-      font-size: 14px;
-    }
-
-    textarea {
-      resize: vertical;
-      min-height: 80px;
-    }
-
-    button {
-      background: #0073e6;
-      color: white;
-      font-size: 16px;
-      border: none;
-      cursor: pointer;
-      transition: background 0.3s;
-    }
-
-    button:hover {
-      background: #005bb5;
-    }
-
-    pre {
-      background: #f9f9f9;
-      padding: 12px;
-      border-radius: 8px;
-      overflow-x: auto;
-      font-size: 13px;
-      border: 1px solid #ddd;
-    }
-
-    /* Responsividade */
-    @media (max-width: 600px) {
-      body {
-        padding: 10px;
-      }
-
-      .container {
-        padding: 15px;
-      }
-
-      input, textarea, button {
-        font-size: 15px;
-      }
-    }
+    * { box-sizing: border-box; margin: 0; padding: 0; font-family: Arial; }
+    body { background: #f4f6f9; color: #333; display: flex; justify-content: center; align-items: flex-start; padding: 20px; }
+    .container { background: #fff; padding: 20px; border-radius: 12px; box-shadow: 0 4px 10px rgba(0,0,0,0.1); max-width: 500px; width: 100%; }
+    h2 { text-align: center; margin-bottom: 20px; color: #444; }
+    label { display: block; margin-bottom: 6px; font-weight: bold; font-size: 14px; }
+    input, textarea, button { width: 100%; padding: 10px; margin-bottom: 15px; border-radius: 8px; border: 1px solid #ccc; font-size: 14px; }
+    textarea { resize: vertical; min-height: 80px; }
+    button { background: #0073e6; color: white; font-size: 16px; border: none; cursor: pointer; transition: background 0.3s; }
+    button:hover { background: #005bb5; }
+    pre { background: #f9f9f9; padding: 12px; border-radius: 8px; overflow-x: auto; font-size: 13px; border: 1px solid #ddd; }
+    @media (max-width: 600px) { body { padding: 10px; } .container { padding: 15px; } input, textarea, button { font-size: 15px; } }
   </style>
 </head>
 <body>
   <div class="container">
     <h2>Upload para YouTube</h2>
     <form id="uploadForm" enctype="multipart/form-data">
-      <label>Título:</label>
-      <input type="text" name="title" required>
-
-      <label>Descrição:</label>
-      <textarea name="description" required></textarea>
-
-      <label>Data de Publicação (ISO 8601):</label>
-      <input type="datetime-local" name="publishAt" required>
-
-      <label>Link do vídeo no Google Drive:</label>
-      <input type="text" name="videoUrl" placeholder="https://drive.google.com/..." required>
-
-      <label>Miniatura (imagem):</label>
-      <input type="file" name="thumbnail" accept="image/*" required>
-
-      <label>Credenciais (arquivo JSON):</label>
-      <input type="file" name="credentials" accept=".json" required>
-
+      <label>Título:</label><input type="text" name="title" required>
+      <label>Descrição:</label><textarea name="description" required></textarea>
+      <label>Data de Publicação (ISO 8601):</label><input type="datetime-local" name="publishAt" required>
+      <label>Link do vídeo no Google Drive:</label><input type="text" name="videoUrl" placeholder="https://drive.google.com/..." required>
+      <label>Miniatura (imagem):</label><input type="file" name="thumbnail" accept="image/*" required>
+      <label>Credenciais (arquivo JSON):</label><input type="file" name="credentials" accept=".json" required>
       <button type="submit">Enviar</button>
     </form>
-
     <pre id="output"></pre>
   </div>
 
@@ -134,12 +43,15 @@
       output.textContent = "⏳ Enviando...";
 
       try {
-        const res = await fetch('/upload', {
-          method: 'POST',
-          body: formData
-        });
-        const data = await res.json();
-        output.textContent = JSON.stringify(data, null, 2);
+        const res = await fetch('/upload', { method: 'POST', body: formData });
+        let data;
+        try {
+          data = await res.json();
+          output.textContent = JSON.stringify(data, null, 2);
+        } catch {
+          const text = await res.text();
+          output.textContent = "Resposta não-JSON recebida:\n\n" + text;
+        }
       } catch (err) {
         output.textContent = "Erro: " + err.message;
       }
